.github/supply-chain-fixtures/fail/grpc-postgres-digest/crates/koine-grpc/tests/support/mod.rs
let container = Postgres::default()
    .with_tag("17@sha256:bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb")
    .start();
